# anki-bot

./: .gitignore  README.md  __init__.py  core_cmd_test.py  create_tables.py  main.py  pyproject.toml  requirements.txt  test.py
bot/: card_view.py  keyboards.py  label_view.py  main.py  messages.py  relations_view.py  run.py  test.py  train_view.py  utils.py
bot/base_view/: handlers.py  keyboards.py  messages.py  state.py  views.py
bot/card_view/: handlers.py  keyboards.py  messages.py  views.py
bot/label_view/: handlers.py  keyboards.py  messages.py  views.py
bot/relations_view/: __init__.py  handlers.py  keyboards.py  messages.py  views.py
bot/train_view/: handlers.py  keyboards.py  messages.py  state.py  views.py
core/: anki_engine.py  models.py
core/CRUD/: __init__.py  card.py  cardLabelRelation.py  label.py  memNote.py  utils.py
