[tool.poetry]
name = "ankibot"
version = "0.1.0"
description = ""
authors = ["Kirill Kozlov <kozlov.kirill.v.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
peewee = "^3.16.2"


[tool.poetry.scripts]
create-tables = 'core.models:create_models'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"